manifests/argocd-lb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.parasu.in`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport
